# MachineLearning

./: .gitignore  CMakeLists.txt  server.py
include/core/: DataLoader.hpp  FeatureEngine.hpp
include/models/: BaseModel.hpp  LinearModel.hpp  OnlineBoost.hpp  RegimeSwitch.hpp
src/: bindings.cpp
src/core/: DataLoader.cpp  FeatureEngine.cpp
src/models/: LinearModel.cpp  OnlineBoost.cpp  RegimeSwitch.cpp
